<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.tomgibara.geom</groupId>
  <artifactId>geom</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>Geom</name>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>21</maven.compiler.release>
  </properties>
  <inceptionYear>2011</inceptionYear>
  <description>Geometry</description>

  <developers>
    <developer>
      <id>tomgibara</id>
      <name>Tom Gibara</name>
      <email>me@tomgibara.com</email>
      <url>http://www.tomgibara.com</url>
      <roles>
        <role>Administrator</role>
        <role>Developer</role>
      </roles>
      <timezone>0</timezone>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <modules>
  	<module>geom-all</module>
  	<module>geom-awt</module>
  	<module>geom-core</module>
  	<module>geom-float</module>
  	<module>geom-sample</module>
  	<module>geom-stroke</module>
  </modules>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

</project>
